NF prefix for blueprints

--- a/Resources/Prototypes/Research/civilianservices.yml
+++ b/Resources/Prototypes/Research/civilianservices.yml
@@ -17,8 +17,8 @@
   - HydroponicsTrayMachineCircuitboard
   - ReagentGrinderIndustrialMachineCircuitboard
   - PlantAnalyzer # Frontier
-  - BlueprintPlantAnalyzerEmptyNF # Frontier
-  - BlueprintPlantBagOfHoldingNF # Frontier
+  - NFBlueprintPlantAnalyzerEmpty # Frontier
+  - NFBlueprintPlantBagOfHolding # Frontier
 
 - type: technology
   id: CritterMechs
@@ -179,7 +179,7 @@
   recipeUnlocks:
   - AdvMopItem
   - MegaSprayBottle
-  - BlueprintAdvMopItemNF # Frontier
+  - NFBlueprintAdvMopItem # Frontier
 
 - type: technology
   id: HONKMech
@@ -253,6 +253,6 @@
   - BluespaceBeaker
   - SyringeBluespace
   - VialBluespace # Frontier
-  - BlueprintBluespaceBeakerNF # Frontier
-  - BlueprintSyringeBluespaceNF # Frontier
-  - BlueprintVialBluespaceNF # Frontier
+  - NFBlueprintBluespaceBeaker # Frontier
+  - NFBlueprintSyringeBluespace # Frontier
+  - NFBlueprintVialBluespace # Frontier
