--- a/Resources/Prototypes/Research/experimental.yml
+++ b/Resources/Prototypes/Research/experimental.yml
@@ -126,6 +126,7 @@
   technologyPrerequisites:
   - BasicAnomalousResearch
 
+# TODO: migrate this tech to an _NF folder
 - type: technology
   id: RapidPartExchange
   name: research-technology-rped
@@ -137,7 +138,7 @@
   cost: 7500
   recipeUnlocks:
   - RPED
-  - BlueprintRpedNF # Frontier
+  - NFBlueprintRped # Frontier
 
 # - type: technology
   # id: DeterrenceTechnologies
