--- a/Resources/Prototypes/Research/industrial.yml
+++ b/Resources/Prototypes/Research/industrial.yml
@@ -173,9 +173,9 @@
     - UtilityBeltChiefEngineer
     - BorgModuleAdvancedTool
     - BorgModuleRCD
-    - BlueprintPowerDrillNF # Frontier
-    - BlueprintJawsOfLifeNF # Frontier
-    - BlueprintWelderExperimentalNF # Frontier
+    - NFBlueprintPowerDrill # Frontier
+    - NFBlueprintJawsOfLife # Frontier
+    - NFBlueprintWelderExperimental # Frontier
 
 - type: technology
   id: MassExcavation
@@ -190,9 +190,9 @@
     - OreBagOfHolding
     - MiningDrillDiamond
     - AdvancedMineralScannerEmpty
-    - BlueprintOreBagOfHoldingNF # Frontier
-    - BlueprintMiningDrillDiamondNF # Frontier
-    - BlueprintAdvancedMineralScannerEmptyNF # Frontier
+    - NFBlueprintOreBagOfHolding # Frontier
+    - NFBlueprintMiningDrillDiamond # Frontier
+    - NFBlueprintAdvancedMineralScannerEmpty # Frontier
 
 # Tier 3
 
@@ -210,10 +210,10 @@
   - ClothingBackpackSatchelHolding
   - ClothingBackpackDuffelHolding
   - ClothingBackpackMessengerHolding # Frontier
-  - BlueprintClothingBackpackHoldingNF # Frontier
-  - BlueprintClothingBackpackSatchelHoldingNF # Frontier
-  - BlueprintClothingBackpackDuffelHoldingNF # Frontier
-  - BlueprintClothingBackpackMessengerHoldingNF # Frontier
+  - NFBlueprintClothingBackpackHolding # Frontier
+  - NFBlueprintClothingBackpackSatchelHolding # Frontier
+  - NFBlueprintClothingBackpackDuffelHolding # Frontier
+  - NFBlueprintClothingBackpackMessengerHolding # Frontier
 
 - type: technology
   id: PortableFission
@@ -226,7 +226,7 @@
   cost: 10000
   recipeUnlocks:
   - PowerCellMicroreactor
-  - BlueprintPowerCellMicroreactorNF # Frontier
+  - NFBlueprintPowerCellMicroreactor # Frontier
   technologyPrerequisites:
   - AdvancedPowercells
 
@@ -242,4 +242,4 @@
   recipeUnlocks:
     - ShipyardRCD # Frontier
     - ShipyardRCDAmmo # Frontier
-    - BlueprintShipyardRCDAmmoNF # Frontier
+    - NFBlueprintShipyardRCDAmmo # Frontier
