--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_armory.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_armory.yml
@@ -1,17 +1,17 @@
 
 - type: entity
-  parent: BaseBlueprintArmoryNF
-  id: BlueprintWeaponAntiqueLaserNF
+  parent: NFBaseBlueprintArmory
+  id: NFBlueprintWeaponAntiqueLaser
   name: antique laser blueprint
   description: A blueprint with a schematic of an antique laser. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
     providedRecipes:
-    - WeaponAntiqueLaserNF
+    - NFWeaponAntiqueLaser
 
 - type: entity
-  parent: BaseBlueprintArmoryNF
-  id: BlueprintWeaponLaserSvalinnNF
+  parent: NFBaseBlueprintArmory
+  id: NFBlueprintWeaponLaserSvalinn
   name: svalinn pistol blueprint
   description: A blueprint with a schematic of a svalinn pistol. It can be inserted into an autolathe or a techfab.
   components:
@@ -20,8 +20,8 @@
     - WeaponLaserSvalinn
 
 - type: entity
-  parent: BaseBlueprintArmoryNF
-  id: BlueprintPortableRechargerNF
+  parent: NFBaseBlueprintArmory
+  id: NFBlueprintPortableRecharger
   name: portable recharger blueprint
   description: A blueprint with a schematic of a portable recharger. It can be inserted into an autolathe or a techfab.
   components:
@@ -30,7 +30,7 @@
     - PortableRecharger
 
 - type: entity
-  parent: BaseBlueprintArmoryNF
+  parent: NFBaseBlueprintArmory
   id: BlueprintClothingOuterHardsuitScaf
   name: scaf hardsuit blueprint
   description: A blueprint with a schematic of a scaf hardsuit. It can be inserted into an autolathe or a techfab.
