--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_medical.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_medical.yml
@@ -1,7 +1,7 @@
 
 - type: entity
-  parent: BaseBlueprintMedicalNF
-  id: BlueprintBluespaceBeakerNF
+  parent: NFBaseBlueprintMedical
+  id: NFBlueprintBluespaceBeaker
   name: bluespace beaker blueprint
   description: A blueprint with a schematic of a bluespace beaker. It can be inserted into an autolathe or a techfab.
   components:
@@ -10,8 +10,8 @@
     - BluespaceBeaker
 
 - type: entity
-  parent: BaseBlueprintMedicalNF
-  id: BlueprintSyringeBluespaceNF
+  parent: NFBaseBlueprintMedical
+  id: NFBlueprintSyringeBluespace
   name: bluespace syringe blueprint
   description: A blueprint with a schematic of a bluespace syringe. It can be inserted into an autolathe or a techfab.
   components:
@@ -20,8 +20,8 @@
     - SyringeBluespace
 
 - type: entity
-  parent: BaseBlueprintMedicalNF
-  id: BlueprintVialBluespaceNF
+  parent: NFBaseBlueprintMedical
+  id: NFBlueprintVialBluespace
   name: bluespace syringe blueprint
   description: A blueprint with a schematic of a bluespace vial. It can be inserted into an autolathe or a techfab.
   components:
