--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_science.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_science.yml
@@ -1,7 +1,7 @@
 
 - type: entity
-  parent: BaseBlueprintScienceNF
-  id: BlueprintRpedNF
+  parent: NFBaseBlueprintScience
+  id: NFBlueprintRped
   name: RPED blueprint
   description: A blueprint with a schematic of a RPED. It can be inserted into an autolathe or a techfab.
   components:
@@ -10,8 +10,8 @@
     - RPED
 
 - type: entity
-  parent: BaseBlueprintScienceNF
-  id: BlueprintSuperCapacitorStockPartNF
+  parent: NFBaseBlueprintScience
+  id: NFBlueprintSuperCapacitorStockPart
   name: super capacitor blueprint
   description: A blueprint with a schematic of a super capacitor. It can be inserted into an autolathe or a techfab.
   components:
@@ -20,8 +20,8 @@
     - SuperCapacitorStockPart
 
 - type: entity
-  parent: BaseBlueprintScienceNF
-  id: BlueprintPicoManipulatorStockPartNF
+  parent: NFBaseBlueprintScience
+  id: NFBlueprintPicoManipulatorStockPart
   name: super manipulator blueprint
   description: A blueprint with a schematic of a super manipulator. It can be inserted into an autolathe or a techfab.
   components:
@@ -30,8 +30,8 @@
     - PicoManipulatorStockPart
 
 - type: entity
-  parent: BaseBlueprintScienceNF
-  id: BlueprintSuperMatterBinStockPartNF
+  parent: NFBaseBlueprintScience
+  id: NFBlueprintSuperMatterBinStockPart
   name: super matter bin blueprint
   description: A blueprint with a schematic of a super matter bin. It can be inserted into an autolathe or a techfab.
   components:
@@ -40,8 +40,8 @@
     - SuperMatterBinStockPart
 
 - type: entity
-  parent: BaseBlueprintScienceNF
-  id: BlueprintClothingShoesBootsMagAdvNF
+  parent: NFBaseBlueprintScience
+  id: NFBlueprintClothingShoesBootsMagAdv
   name: advanced magboots blueprint
   description: A blueprint with a schematic of an advanced magboots. It can be inserted into an autolathe or a techfab.
   components:
