--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_service.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_service.yml
@@ -1,7 +1,7 @@
 
 - type: entity
-  parent: BaseBlueprintServiceNF
-  id: BlueprintAdvMopItemNF
+  parent: NFBaseBlueprintService
+  id: NFBlueprintAdvMopItem
   name: advanced mop blueprint
   description: A blueprint with a schematic of an advanced mop. It can be inserted into an autolathe or a techfab.
   components:
@@ -10,8 +10,8 @@
     - AdvMopItem
 
 - type: entity
-  parent: BaseBlueprintServiceNF
-  id: BlueprintPlantAnalyzerEmptyNF
+  parent: NFBaseBlueprintService
+  id: NFBlueprintPlantAnalyzerEmpty
   name: plant analyzer blueprint
   description: A blueprint with a schematic of a plant analyzer. It can be inserted into an autolathe or a techfab.
   components:
@@ -20,8 +20,8 @@
     - PlantAnalyzer
 
 - type: entity
-  parent: BaseBlueprintServiceNF
-  id: BlueprintPlantBagOfHoldingNF
+  parent: NFBaseBlueprintService
+  id: NFBlueprintPlantBagOfHolding
   name: bluespace plant bag blueprint
   description: A blueprint with a schematic of a bluespace plant bag. It can be inserted into an autolathe or a techfab.
   components:
