--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -750,44 +750,44 @@
     idleState: icon
     runningState: building
     staticRecipes:
-    - BlueprintPowerCellMediumPrintedNF
+    - NFBlueprintPowerCellMediumPrinted
     dynamicRecipes:
     # Engineering
-    - BlueprintPowerDrillNF
-    - BlueprintJawsOfLifeNF
-    - BlueprintWelderExperimentalNF
-    - BlueprintShipyardRCDAmmoNF
-    - BlueprintPowerCellMicroreactorNF
-    - BlueprintSignallerAdvancedNF
-    - BlueprintClothingBackpackHoldingNF
-    - BlueprintClothingBackpackSatchelHoldingNF
-    - BlueprintClothingBackpackMessengerHoldingNF
-    - BlueprintClothingBackpackDuffelHoldingNF
-    - BlueprintConstructionBagOfHoldingNF
-    - BlueprintPortableRechargerNF
+    - NFBlueprintPowerDrill
+    - NFBlueprintJawsOfLife
+    - NFBlueprintWelderExperimental
+    - NFBlueprintShipyardRCDAmmo
+    - NFBlueprintPowerCellMicroreactor
+    - NFBlueprintSignallerAdvanced
+    - NFBlueprintClothingBackpackHolding
+    - NFBlueprintClothingBackpackSatchelHolding
+    - NFBlueprintClothingBackpackMessengerHolding
+    - NFBlueprintClothingBackpackDuffelHolding
+    - NFBlueprintConstructionBagOfHolding
+    - NFBlueprintPortableRecharger
     # Medical
-    - BlueprintBluespaceBeakerNF
-    - BlueprintSyringeBluespaceNF
-    - BlueprintVialBluespaceNF
+    - NFBlueprintBluespaceBeaker
+    - NFBlueprintSyringeBluespace
+    - NFBlueprintVialBluespace
     # Salvage
-    - BlueprintOreBagOfHoldingNF
-    - BlueprintMiningDrillDiamondNF
-    - BlueprintAdvancedMineralScannerEmptyNF
-    - BlueprintClothingOuterHardsuitMaximPrototypeNF
+    - NFBlueprintOreBagOfHolding
+    - NFBlueprintMiningDrillDiamond
+    - NFBlueprintAdvancedMineralScannerEmpty
+    - NFBlueprintClothingOuterHardsuitMaximPrototype
     # Science
-    - BlueprintRpedNF
-    - BlueprintSuperCapacitorStockPartNF
-    - BlueprintPicoManipulatorStockPartNF
-    - BlueprintSuperMatterBinStockPartNF
-    - BlueprintClothingShoesBootsMagAdvNF
+    - NFBlueprintRped
+    - NFBlueprintSuperCapacitorStockPart
+    - NFBlueprintPicoManipulatorStockPart
+    - NFBlueprintSuperMatterBinStockPart
+    - NFBlueprintClothingShoesBootsMagAdv
     # Service
-    - BlueprintAdvMopItemNF
-    - BlueprintPlantAnalyzerEmptyNF
-    - BlueprintPlantBagOfHoldingNF
+    - NFBlueprintAdvMopItem
+    - NFBlueprintPlantAnalyzerEmpty
+    - NFBlueprintPlantBagOfHolding
     # Armory
-    - BlueprintWeaponAntiqueLaserNF
-    - BlueprintWeaponLaserSvalinnNF
-    - BlueprintPortableRechargerNF
+    - NFBlueprintWeaponAntiqueLaser
+    - NFBlueprintWeaponLaserSvalinn
+    - NFBlueprintPortableRecharger
     - BlueprintClothingOuterHardsuitScaf
   - type: MaterialStorage
     whitelist:
