--- a/Resources/Prototypes/_NF/Recipes/Lathes/blueprints.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/blueprints.yml
@@ -2,7 +2,7 @@
 
 - type: latheRecipe
   abstract: true
-  id: BaseBlueprintLatheRecipeNF
+  id: NFBaseBlueprintLatheRecipe
   completetime: 4
   materials:
     Paper: 500
@@ -11,166 +11,166 @@
 ## Engineering
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintPowerDrillNF
-  result: BlueprintPowerDrillNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintPowerDrill
+  result: NFBlueprintPowerDrill
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintJawsOfLifeNF
-  result: BlueprintJawsOfLifeNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintJawsOfLife
+  result: NFBlueprintJawsOfLife
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintWelderExperimentalNF
-  result: BlueprintWelderExperimentalNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintWelderExperimental
+  result: NFBlueprintWelderExperimental
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintShipyardRCDAmmoNF
-  result: BlueprintShipyardRCDAmmoNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintShipyardRCDAmmo
+  result: NFBlueprintShipyardRCDAmmo
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintPowerCellMicroreactorNF
-  result: BlueprintPowerCellMicroreactorNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintPowerCellMicroreactor
+  result: NFBlueprintPowerCellMicroreactor
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintPowerCellMediumPrintedNF
-  result: BlueprintPowerCellMediumPrintedNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintPowerCellMediumPrinted
+  result: NFBlueprintPowerCellMediumPrinted
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintSignallerAdvancedNF
-  result: BlueprintSignallerAdvancedNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintSignallerAdvanced
+  result: NFBlueprintSignallerAdvanced
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintClothingBackpackHoldingNF
-  result: BlueprintClothingBackpackHoldingNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintClothingBackpackHolding
+  result: NFBlueprintClothingBackpackHolding
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintClothingBackpackSatchelHoldingNF
-  result: BlueprintClothingBackpackSatchelHoldingNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintClothingBackpackSatchelHolding
+  result: NFBlueprintClothingBackpackSatchelHolding
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintClothingBackpackMessengerHoldingNF
-  result: BlueprintClothingBackpackMessengerHoldingNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintClothingBackpackMessengerHolding
+  result: NFBlueprintClothingBackpackMessengerHolding
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintClothingBackpackDuffelHoldingNF
-  result: BlueprintClothingBackpackDuffelHoldingNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintClothingBackpackDuffelHolding
+  result: NFBlueprintClothingBackpackDuffelHolding
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintConstructionBagOfHoldingNF
-  result: BlueprintConstructionBagOfHoldingNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintConstructionBagOfHolding
+  result: NFBlueprintConstructionBagOfHolding
 
 ## Medical
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintBluespaceBeakerNF
-  result: BlueprintBluespaceBeakerNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintBluespaceBeaker
+  result: NFBlueprintBluespaceBeaker
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintSyringeBluespaceNF
-  result: BlueprintSyringeBluespaceNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintSyringeBluespace
+  result: NFBlueprintSyringeBluespace
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintVialBluespaceNF
-  result: BlueprintVialBluespaceNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintVialBluespace
+  result: NFBlueprintVialBluespace
 
 ## Salvage
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintOreBagOfHoldingNF
-  result: BlueprintOreBagOfHoldingNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintOreBagOfHolding
+  result: NFBlueprintOreBagOfHolding
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintMiningDrillDiamondNF
-  result: BlueprintMiningDrillDiamondNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintMiningDrillDiamond
+  result: NFBlueprintMiningDrillDiamond
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintAdvancedMineralScannerEmptyNF
-  result: BlueprintAdvancedMineralScannerEmptyNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintAdvancedMineralScannerEmpty
+  result: NFBlueprintAdvancedMineralScannerEmpty
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintClothingOuterHardsuitMaximPrototypeNF
-  result: BlueprintClothingOuterHardsuitMaximPrototypeNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintClothingOuterHardsuitMaximPrototype
+  result: NFBlueprintClothingOuterHardsuitMaximPrototype
 
 ## Science
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintRpedNF
-  result: BlueprintRpedNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintRped
+  result: NFBlueprintRped
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintSuperCapacitorStockPartNF
-  result: BlueprintSuperCapacitorStockPartNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintSuperCapacitorStockPart
+  result: NFBlueprintSuperCapacitorStockPart
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintPicoManipulatorStockPartNF
-  result: BlueprintPicoManipulatorStockPartNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintPicoManipulatorStockPart
+  result: NFBlueprintPicoManipulatorStockPart
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintSuperMatterBinStockPartNF
-  result: BlueprintSuperMatterBinStockPartNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintSuperMatterBinStockPart
+  result: NFBlueprintSuperMatterBinStockPart
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintClothingShoesBootsMagAdvNF
-  result: BlueprintClothingShoesBootsMagAdvNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintClothingShoesBootsMagAdv
+  result: NFBlueprintClothingShoesBootsMagAdv
 
 ## Service
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintAdvMopItemNF
-  result: BlueprintAdvMopItemNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintAdvMopItem
+  result: NFBlueprintAdvMopItem
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintPlantAnalyzerEmptyNF
-  result: BlueprintPlantAnalyzerEmptyNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintPlantAnalyzerEmpty
+  result: NFBlueprintPlantAnalyzerEmpty
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintPlantBagOfHoldingNF
-  result: BlueprintPlantBagOfHoldingNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintPlantBagOfHolding
+  result: NFBlueprintPlantBagOfHolding
 
 ## Armory
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintWeaponAntiqueLaserNF
-  result: BlueprintWeaponAntiqueLaserNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintWeaponAntiqueLaser
+  result: NFBlueprintWeaponAntiqueLaser
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintWeaponLaserSvalinnNF
-  result: BlueprintWeaponLaserSvalinnNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintWeaponLaserSvalinn
+  result: NFBlueprintWeaponLaserSvalinn
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
-  id: BlueprintPortableRechargerNF
-  result: BlueprintPortableRechargerNF
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintPortableRecharger
+  result: NFBlueprintPortableRecharger
 
 - type: latheRecipe
-  parent: BaseBlueprintLatheRecipeNF
+  parent: NFBaseBlueprintLatheRecipe
   id: BlueprintClothingOuterHardsuitScaf
   result: BlueprintClothingOuterHardsuitScaf
