--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_engineering.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_engineering.yml
@@ -1,7 +1,7 @@
 # Advanced Tools
 - type: entity
-  parent: BaseBlueprintEngineeringNF
-  id: BlueprintPowerDrillNF
+  parent: NFBaseBlueprintEngineering
+  id: NFBlueprintPowerDrill
   name: power drill blueprint
   description: A blueprint with a schematic of a power drill. It can be inserted into an autolathe or a techfab.
   components:
@@ -10,8 +10,8 @@
     - PowerDrill
 
 - type: entity
-  parent: BaseBlueprintEngineeringNF
-  id: BlueprintJawsOfLifeNF
+  parent: NFBaseBlueprintEngineering
+  id: NFBlueprintJawsOfLife
   name: jaws of life blueprint
   description: A blueprint with a schematic of a jaws of life. It can be inserted into an autolathe or a techfab.
   components:
@@ -20,8 +20,8 @@
     - JawsOfLife
 
 - type: entity
-  parent: BaseBlueprintEngineeringNF
-  id: BlueprintWelderExperimentalNF
+  parent: NFBaseBlueprintEngineering
+  id: NFBlueprintWelderExperimental
   name: experimental welder blueprint
   description: A blueprint with a schematic of an experimental welder. It can be inserted into an autolathe or a techfab.
   components:
@@ -30,8 +30,8 @@
     - WelderExperimental
 
 - type: entity
-  parent: BaseBlueprintEngineeringNF
-  id: BlueprintShipyardRCDAmmoNF
+  parent: NFBaseBlueprintEngineering
+  id: NFBlueprintShipyardRCDAmmo
   name: shipyard compressed matter blueprint
   description: A blueprint with a schematic of a shipyard compressed matter. It can be inserted into an autolathe or a techfab.
   components:
@@ -41,8 +41,8 @@
 
 # Power cells
 - type: entity
-  parent: BaseBlueprintEngineeringNF
-  id: BlueprintPowerCellMediumPrintedNF
+  parent: NFBaseBlueprintEngineering
+  id: NFBlueprintPowerCellMediumPrinted
   name: medium-capacity power cell blueprint
   description: A blueprint with a schematic of a medium-capacity power cell. It can be inserted into an autolathe or a techfab.
   components:
@@ -51,8 +51,8 @@
     - PowerCellMedium
 
 - type: entity
-  parent: BaseBlueprintEngineeringNF
-  id: BlueprintPowerCellMicroreactorNF
+  parent: NFBaseBlueprintEngineering
+  id: NFBlueprintPowerCellMicroreactor
   name: microreactor blueprint
   description: A blueprint with a schematic of a microreactor. It can be inserted into an autolathe or a techfab.
   components:
@@ -62,8 +62,8 @@
 
 # Devices
 - type: entity
-  parent: BaseBlueprintEngineeringNF
-  id: BlueprintSignallerAdvancedNF
+  parent: NFBaseBlueprintEngineering
+  id: NFBlueprintSignallerAdvanced
   name: advanced signaller blueprint
   description: A blueprint with a schematic of an advanced signaller. It can be inserted into an autolathe or a techfab.
   components:
@@ -72,8 +72,8 @@
     - SignallerAdvanced
 
 - type: entity
-  parent: BaseBlueprintEngineeringNF
-  id: BlueprintClothingBackpackHoldingNF
+  parent: NFBaseBlueprintEngineering
+  id: NFBlueprintClothingBackpackHolding
   name: bluespace backpack blueprint
   description: A blueprint with a schematic of a bluespace backpack. It can be inserted into an autolathe or a techfab.
   components:
@@ -82,8 +82,8 @@
     - ClothingBackpackHolding
 
 - type: entity
-  parent: BaseBlueprintEngineeringNF
-  id: BlueprintClothingBackpackSatchelHoldingNF
+  parent: NFBaseBlueprintEngineering
+  id: NFBlueprintClothingBackpackSatchelHolding
   name: bluespace satchel blueprint
   description: A blueprint with a schematic of a bluespace satchel. It can be inserted into an autolathe or a techfab.
   components:
@@ -92,8 +92,8 @@
     - ClothingBackpackSatchelHolding
 
 - type: entity
-  parent: BaseBlueprintEngineeringNF
-  id: BlueprintClothingBackpackMessengerHoldingNF
+  parent: NFBaseBlueprintEngineering
+  id: NFBlueprintClothingBackpackMessengerHolding
   name: bluespace messenger bag blueprint
   description: A blueprint with a schematic of a bluespace messenger bag. It can be inserted into an autolathe or a techfab.
   components:
@@ -102,8 +102,8 @@
     - ClothingBackpackMessengerHolding
 
 - type: entity
-  parent: BaseBlueprintEngineeringNF
-  id: BlueprintClothingBackpackDuffelHoldingNF
+  parent: NFBaseBlueprintEngineering
+  id: NFBlueprintClothingBackpackDuffelHolding
   name: bluespace duffel blueprint
   description: A blueprint with a schematic of a bluespace duffel. It can be inserted into an autolathe or a techfab.
   components:
@@ -112,8 +112,8 @@
     - ClothingBackpackDuffelHolding
 
 - type: entity
-  parent: BaseBlueprintEngineeringNF
-  id: BlueprintConstructionBagOfHoldingNF
+  parent: NFBaseBlueprintEngineering
+  id: NFBlueprintConstructionBagOfHolding
   name: bluespace construction bag blueprint
   description: A blueprint with a schematic of a bluespace construction bag. It can be inserted into an autolathe or a techfab.
   components:
