--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_salvage.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_salvage.yml
@@ -1,7 +1,7 @@
 
 - type: entity
-  parent: BaseBlueprintSalvageNF
-  id: BlueprintOreBagOfHoldingNF
+  parent: NFBaseBlueprintSalvage
+  id: NFBlueprintOreBagOfHolding
   name: bluespace ore bag blueprint
   description: A blueprint with a schematic of a bluespace ore bag. It can be inserted into an autolathe or a techfab.
   components:
@@ -10,8 +10,8 @@
     - OreBagOfHolding
 
 - type: entity
-  parent: BaseBlueprintSalvageNF
-  id: BlueprintMiningDrillDiamondNF
+  parent: NFBaseBlueprintSalvage
+  id: NFBlueprintMiningDrillDiamond
   name: diamond tipped mining drill blueprint
   description: A blueprint with a schematic of a diamond tipped mining drill. It can be inserted into an autolathe or a techfab.
   components:
@@ -20,8 +20,8 @@
     - MiningDrillDiamond
 
 - type: entity
-  parent: BaseBlueprintSalvageNF
-  id: BlueprintAdvancedMineralScannerEmptyNF
+  parent: NFBaseBlueprintSalvage
+  id: NFBlueprintAdvancedMineralScannerEmpty
   name: advanced mineral scanner blueprint
   description: A blueprint with a schematic of an advanced mineral scanner. It can be inserted into an autolathe or a techfab.
   components:
@@ -30,8 +30,8 @@
     - AdvancedMineralScannerEmpty
 
 - type: entity
-  parent: BaseBlueprintSalvageNF
-  id: BlueprintClothingOuterHardsuitMaximPrototypeNF
+  parent: NFBaseBlueprintSalvage
+  id: NFBlueprintClothingOuterHardsuitMaximPrototype
   name: experimental salvager hardsuit blueprint
   description: A blueprint with a schematic of an experimental salvager hardsuit. It can be inserted into an autolathe or a techfab.
   components:
