Fix Antique laser (NF suffix)

--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_armory.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_armory.yml
@@ -7,7 +7,7 @@
   components:
   - type: Blueprint
     providedRecipes:
-    - NFWeaponAntiqueLaser
+    - WeaponAntiqueLaserNF
 
 - type: entity
   parent: NFBaseBlueprintArmory
