PaperVis missing layer

--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_base.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_base.yml
@@ -15,6 +15,10 @@
         offset: 0.15,-0.1
         map: ["enum.PaperVisualLayers.Stamp"]
         visible: false
+      - sprite: Objects/Misc/bureaucracy.rsi # Need for PaperVisuals otherwise it wont stop complaining
+        state: paper_words
+        map: ["enum.PaperVisualLayers.Writing"]
+        visible: false
   - type: Item
     size: Normal
     sprite: _NF/Objects/Tools/blueprints.rsi
@@ -112,6 +116,10 @@
         offset: 0.15,-0.1
         map: ["enum.PaperVisualLayers.Stamp"]
         visible: false
+      - sprite: Objects/Misc/bureaucracy.rsi # Need for PaperVisuals otherwise it wont stop complaining
+        state: paper_words
+        map: ["enum.PaperVisualLayers.Writing"]
+        visible: false
   - type: Item
     size: Normal
     inhandVisuals:
@@ -140,6 +148,10 @@
         state: paper_stamp-generic
         offset: 0.15,-0.1
         map: ["enum.PaperVisualLayers.Stamp"]
+        visible: false
+      - sprite: Objects/Misc/bureaucracy.rsi # Need for PaperVisuals otherwise it wont stop complaining
+        state: paper_words
+        map: ["enum.PaperVisualLayers.Writing"]
         visible: false
   - type: Item
     size: Normal
@@ -170,6 +182,10 @@
         offset: 0.15,-0.1
         map: ["enum.PaperVisualLayers.Stamp"]
         visible: false
+      - sprite: Objects/Misc/bureaucracy.rsi # Need for PaperVisuals otherwise it wont stop complaining
+        state: paper_words
+        map: ["enum.PaperVisualLayers.Writing"]
+        visible: false
   - type: Item
     size: Normal
     inhandVisuals:
@@ -198,6 +214,10 @@
         state: paper_stamp-generic
         offset: 0.15,-0.1
         map: ["enum.PaperVisualLayers.Stamp"]
+        visible: false
+      - sprite: Objects/Misc/bureaucracy.rsi # Need for PaperVisuals otherwise it wont stop complaining
+        state: paper_words
+        map: ["enum.PaperVisualLayers.Writing"]
         visible: false
   - type: Item
     size: Normal
@@ -228,6 +248,10 @@
         offset: 0.15,-0.1
         map: ["enum.PaperVisualLayers.Stamp"]
         visible: false
+      - sprite: Objects/Misc/bureaucracy.rsi # Need for PaperVisuals otherwise it wont stop complaining
+        state: paper_words
+        map: ["enum.PaperVisualLayers.Writing"]
+        visible: false
   - type: Item
     size: Normal
     inhandVisuals:
@@ -256,6 +280,10 @@
         state: paper_stamp-generic
         offset: 0.15,-0.1
         map: ["enum.PaperVisualLayers.Stamp"]
+        visible: false
+      - sprite: Objects/Misc/bureaucracy.rsi # Need for PaperVisuals otherwise it wont stop complaining
+        state: paper_words
+        map: ["enum.PaperVisualLayers.Writing"]
         visible: false
   - type: Item
     size: Normal
@@ -286,6 +314,10 @@
         state: paper_stamp-generic
         offset: 0.15,-0.1
         map: ["enum.PaperVisualLayers.Stamp"]
+        visible: false
+      - sprite: Objects/Misc/bureaucracy.rsi # Need for PaperVisuals otherwise it wont stop complaining
+        state: paper_words
+        map: ["enum.PaperVisualLayers.Writing"]
         visible: false
   - type: Item
     size: Normal
@@ -319,6 +351,10 @@
         state: paper_stamp-generic
         offset: 0.15,-0.1
         map: ["enum.PaperVisualLayers.Stamp"]
+        visible: false
+      - sprite: Objects/Misc/bureaucracy.rsi # Need for PaperVisuals otherwise it wont stop complaining
+        state: paper_words
+        map: ["enum.PaperVisualLayers.Writing"]
         visible: false
   - type: Item
     size: Normal
