--- a/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
@@ -151,7 +151,7 @@
 
 - type: microwaveMealRecipe
   id: RecipeRaisins
-  name: raisins recipe
+  name: raisins
   result: ReagentContainerRaisin # A little bit cursed, spawning a bag
   time: 30
   solids:
@@ -166,55 +166,6 @@
     FoodCucumber: 1
   reagents:
     Saline: 10
-    
-- type: microwaveMealRecipe
-  id: RecipePoachedPears
-  name: poached pears recipe
-  result: FoodMealPoachedPears
-  time: 10
-  solids:
-    FoodBowlBig: 1
-    FoodPear: 3
-    FoodOrange: 2
-  reagents:
-    Wine: 10
-    
-- type: microwaveMealRecipe
-  id: RecipePearsBelleHelene
-  name: pears belle helene recipe
-  result: FoodMealPearsBelleHelene
-  time: 10
-  solids:
-    FoodBowlBig: 1
-    FoodPear: 3
-    FoodSnackChocolateBar: 2
-    FoodLemon: 1
-  reagents:
-    Cream: 5
-
-- type: microwaveMealRecipe
-  id: RecipePearMuffin
-  name: pear muffin recipe
-  result: FoodBakedMuffinPear
-  time: 10
-  solids:
-    FoodPear: 1
-    FoodSnackChocolateBar: 1
-  reagents:
-    Flour: 5
-    Oats: 5
-    Sugar: 5
-    
-- type: microwaveMealRecipe
-  id: RecipePearCheeseTart
-  name: pear and cheese tart recipe
-  result: FoodTartPearCheese
-  time: 15
-  solids:
-    FoodPlateTin: 1
-    FoodDoughPie: 1
-    FoodPear: 2
-    FoodChevre: 1
 
 # NOT ACTUAL FOOD
 
@@ -238,5 +189,5 @@
     Cognizine: 5
     UnstableMutagen: 5
   solids:
-    TrashBakedBananaPeel: 1
-    OrganAnimalHeart: 1
+    TrashBananaPeel: 1
+    FoodEggDuckFertilized: 1
