--- a/Resources/Prototypes/_NF/Voice/speech_emote_sounds.yml
+++ b/Resources/Prototypes/_NF/Voice/speech_emote_sounds.yml
@@ -126,3 +126,10 @@
   sounds:
     Scream:
       collection: Fox
+
+- type: emoteSounds
+  id: Duck
+  sound:
+    path: /Audio/Animals/duck_quack_happy.ogg
+    params:
+      variation: 0.125
