--- a/Resources/Prototypes/_NF/Voice/speech_sounds.yml
+++ b/Resources/Prototypes/_NF/Voice/speech_sounds.yml
@@ -15,3 +15,12 @@
     path: /Audio/Animals/fox3.ogg
   exclaimSound:
     path: /Audio/Animals/fox5.ogg
+
+- type: speechSounds
+  id: Duck
+  saySound:
+    path: /Audio/Animals/duck_quack_happy.ogg
+  askSound:
+    path: /Audio/Animals/duck_quack_happy.ogg
+  exclaimSound:
+    path: /Audio/Animals/duck_quack_happy.ogg
