--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/animals.yml
@@ -59,9 +59,9 @@
 
 - type: entity
   name: Quanana
-  parent: MobDuckMallard
+  parent: [ FoodBanana, SimpleMobBase ]
   id: MobBananaDuck
-  description: It's a banana. It's a duck. It's a quanana.
+  description: It quacks. It's a banana. It's a quanana.
   components:
   - type: Sprite
     noRot: true
@@ -69,78 +69,45 @@
     layers:
     - map: ["enum.DamageStateVisualLayers.Base"]
       state: quack
-    sprite: _NF/Mobs/Animals/Banana_duck.rsi
+      sprite: _NF/Mobs/Animals/Banana_duck.rsi
     scale: 0.7,0.7
   - type: GhostRole
-    prob: 1
     name: ghost-role-information-BananaDuck-name
     allowMovement: true
     description: ghost-role-information-BananaDuck-description
     rules: ghost-role-information-nonantagonist-rules
   - type: GhostTakeoverAvailable
-  - type: ReproductivePartner
-  - type: Reproductive
-    breedChance: 0.10
-    birthPopup: reproductive-laid-egg-popup
-    makeOffspringInfant: false
-    partnerWhitelist:
-      tags:
-      - Duck
-    offspring:
-    - id: FoodEggQuananaFertilized
-      maxAmount: 3
   - type: EggLayer
     eggSpawn:
-    - id: FoodEggQuananaFertilized
-  - type: ReplacementAccent
-    accent: duck
+    - id: FoodBananaBaby
+  - type: Speech
+    speechSounds: Duck
+    speechVerb: SmallMob
+  - type: RotationVisuals
+    defaultRotation: 0
+    horizontalRotation: 90
   - type: DamageStateVisuals
     states:
       Alive:
         Base: quack
       Dead:
-        Base: dead
+        Base: quack
   - type: Slippery
-    paralyzeTime: 0.5
-    launchForwardsMultiplier: 1.0
   - type: StepTrigger
     intersectRatio: 0.2
   - type: NoSlip
   - type: Butcherable
     spawned:
     - id: FoodBanana
-  - type: Bloodstream
-    bloodReagent: Potassium
-    bloodMaxVolume: 100
-  - type: MeleeWeapon
-    soundHit:
-        path: /Audio/Effects/bite.ogg
-    angle: 0
-    animation: WeaponArcBite
-    damage:
-      types:
-        Slash: 5
-  - type: NPCRetaliation
-  - type: CombatMode
-  - type: HTN
-    rootTask:
-      task: SimpleHostileCompound
-  - type: NPCImprintingOnSpawnBehaviour #your a momma now 
-    whitelist:
-      components:
-      - HumanoidAppearance
-
-- type: entity
-  id: FoodEggQuananaFertilized
-  parent: FoodEgg
-  suffix: Fertilized, Quanana
-  components:
-    - type: Timer
-    - type: TimedSpawner
-      prototypes:
-      - MobBananaDuck
-      intervalSeconds: 20
-      minimumEntitiesSpawned: 1
-      maximumEntitiesSpawned: 1
-    - type: TimedDespawn #delete the egg after the Quanana spawns
-      lifetime: 21
+      amount: 3
+  - type: SolutionContainerManager # Shouldn't die in two bites
+    solutions:
+      food:
+        maxVol: 50
+        reagents:
+        - ReagentId: Nutriment
+          Quantity: 30
+        - ReagentId: Vitamin
+          Quantity: 15
+  - type: Puller
+    needsHands: false
