--- a/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
@@ -34,6 +34,7 @@
   components:
   - type: WarpPoint
     location: "Listening Point: Bravo"
+    adminOnly: true
 
 - type: entity
   id: WarpPointNFLodge
@@ -124,6 +125,7 @@
   components:
   - type: WarpPoint
     location: Pirate's Cove
+    adminOnly: true
 
 - type: entity
   id: WarpPointNFGrifty
