--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
@@ -116,6 +116,8 @@
     transferAmount: 15
     onlyAffectsMobs: false
     injectOnly: true
+    preventCombatInjection: true # Frontier
+    delayOnInjectingOthers: 0.5 # Frontier
   - type: Appearance
   - type: SolutionContainerVisuals
     maxFillLevels: 1
