--- a/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
@@ -82,7 +82,7 @@
   parent: PosterBase
   id: NFPosterContrabandEmsCoords
   name: "EMS Suit Coordinates Reminder"
-  description: "Rosy the Medicroach reminding you to turn your suit coordinates! Make sure your next death isn't your last!"
+  description: "Rosy the Medroach reminding you to turn your suit coordinates! Make sure your next death isn't your last!"
   components:
   - type: Sprite
     sprite: _NF/Structures/Wallmounts/posters.rsi
