--- a/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
@@ -167,6 +167,55 @@
   reagents:
     Saline: 10
 
+- type: microwaveMealRecipe
+  id: RecipePoachedPears
+  name: poached pears recipe
+  result: FoodMealPoachedPears
+  time: 10
+  solids:
+    FoodBowlBig: 1
+    FoodPear: 3
+    FoodOrange: 2
+  reagents:
+    Wine: 10
+
+- type: microwaveMealRecipe
+  id: RecipePearsBelleHelene
+  name: pears belle helene recipe
+  result: FoodMealPearsBelleHelene
+  time: 10
+  solids:
+    FoodBowlBig: 1
+    FoodPear: 3
+    FoodSnackChocolateBar: 2
+    FoodLemon: 1
+  reagents:
+    Cream: 5
+
+- type: microwaveMealRecipe
+  id: RecipePearMuffin
+  name: pear muffin recipe
+  result: FoodBakedMuffinPear
+  time: 10
+  solids:
+    FoodPear: 1
+    FoodSnackChocolateBar: 1
+  reagents:
+    Flour: 5
+    Oats: 5
+    Sugar: 5
+
+- type: microwaveMealRecipe
+  id: RecipePearCheeseTart
+  name: pear and cheese tart recipe
+  result: FoodTartPearCheese
+  time: 15
+  solids:
+    FoodPlateTin: 1
+    FoodDoughPie: 1
+    FoodPear: 2
+    FoodChevre: 1
+
 # NOT ACTUAL FOOD
 
 - type: microwaveMealRecipe
