--- a/Resources/Prototypes/Corvax/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/shotgun.yml
+++ b/Resources/Prototypes/Corvax/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/shotgun.yml
@@ -35,6 +35,8 @@
       reagents:
       - ReagentId: TearGas
         Quantity: 50
+      - ReagentId: Ipecac
+        Quantity: 10
     spreadAmount: 1
   - type: ActiveTimerTrigger
     timeRemaining: 1
@@ -66,7 +68,7 @@
   - type: ProjectileSpread
     proto: PelletKS23Base
     count: 6
-    spread: 15
+    spread: 5
 
 - type: entity
   id: PelletKS23Beanbag
