--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -434,10 +434,10 @@
       - WeaponXrayCannon # Frontier
       - SpeedLoaderRifleHeavyIncendiary # Frontier
       - SpeedLoaderRifleHeavyUranium # Frontier
-      - ShellKS23Smoke # Corvax-Frontier
-      - ShellKS23Flashbang # Corvax-Frontier
-      - ShellKS23Beanbag # Corvax-Frontier
-      - ShellKS23Base #  Corvax-Frontier
+      - BoxSmokeKS23 # Corvax-Frontier
+      - BoxFlashbangKS23 # Corvax-Frontier
+      - BoxBeanbagKS23 # Corvax-Frontier
+      - BoxLethalshotKS23 #  Corvax-Frontier
       - MagazineBoxVector22Incendiary #Corvax-Frontier
       - MagazineBoxVector22Uranium #Corvax-Frontier
       - MagazineVector22Incendiary #Corvax-Frontier
@@ -846,8 +846,8 @@
       - MagazineVector45Empty
       - MagazineVector22
       - MagazineVector22Empty
-      - ShellKS23Beanbag # Corvax-Frontier
-      - ShellKS23Base # Corvax-Frontier
+      - BoxBeanbagKS23 # Corvax-Frontier
+      - BoxLethalshotKS23 # Corvax-Frontier
       - ClothingOuterHardsuitSecurity
       - ClothingOuterHardsuitWarden
       - ClothingOuterHardsuitBrigmedic
@@ -936,8 +936,8 @@
       - ShuttleSmgRifleAmmoBox
       - ShuttleRifleAmmoBox
       - ShuttleMagnumRifleAmmoBox
-      - ShellKS23Smoke #  Corvax-Frontier
-      - ShellKS23Flashbang # Corvax-Frontier
+      - BoxSmokeKS23 #  Corvax-Frontier
+      - BoxFlashbangKS23 # Corvax-Frontier
       #Corvax-Frontier End
   - type: MaterialStorage
     whitelist:
@@ -992,8 +992,8 @@
         - SpeedLoaderMagnumEmpty
         - SpeedLoaderRifleHeavy # Frontier
         - SpeedLoaderRifleHeavyEmpty # Frontier
-        - ShellKS23Beanbag # Corvax-Frontier
-        - ShellKS23Base # Corvax-Frontier
+        - BoxBeanbagKS23 # Corvax-Frontier
+        - BoxLethalshotKS23 # Corvax-Frontier
         - 10roundmagazine #frontier by VividPups
         - 10roundmagazineempty #frontier by VividPups
         - MagazineBoxVector45 #CorvaxFrontier
