--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -501,8 +501,8 @@
       - MagazineBoxLightRifle
       - MagazineBoxPistol
       - MagazineBoxRifle
-      - ShellKS23Beanbag # Corvax-Frontier
-      - ShellKS23Base # Corvax-Frontier
+      - BoxBeanbagKS23 # Corvax-Frontier
+      - BoxLethalshotKS23 # Corvax-Frontier
     ## Mags / Speedloaders / Clips
       - MagazineNovaliteC1Empty
       - MagazineNovaliteC1
@@ -594,8 +594,8 @@
       - MagazineBoxPistolRubber
       - MagazineBoxRifleRubber
       - MagazineShotgunBeanbag
-      - ShellKS23Smoke # Corvax-Frontier
-      - ShellKS23Flashbang # Corvax-Frontier
+      - BoxSmokeKS23 # Corvax-Frontier
+      - BoxFlashbangKS23 # Corvax-Frontier
 
 - type: entity
   id: MercenaryTechFabHacked
