Change to a manufacturer name whose acronym has less potential for confusion

--- a/Resources/Prototypes/_NF/Shipyard/Expedition/charon.yml
+++ b/Resources/Prototypes/_NF/Shipyard/Expedition/charon.yml
@@ -10,8 +10,8 @@
 #
 - type: vessel
   id: Charon
-  name: ITS Charon
-  description: Originally built as a roll-on, roll-off transport for heavy terraforming equipment. Since its obsolescence and appearance on the secondary market, the Charon has become a favorite of upfitters for the broad possibilities afforded by its open equipment bay. A product of Interstellar Transportation Specialties.
+  name: EIS Charon
+  description: Originally built as a roll-on, roll-off transport for heavy terraforming equipment. Since its obsolescence and appearance on the secondary market, the Charon has become a favorite of upfitters for the broad possibilities afforded by its open equipment bay. A product of Endurance Industrial Shipyards.
   # Sell value @ exped shipyard 61417, 15% markup and rounding up to the nearest thousand gives us...
   price: 71000
   # 24x33 tiles
