Add advanced mineral scanner, "paramedical" -al

--- a/Resources/Prototypes/_NF/Entities/Objects/Specific/Robotics/borg_modules.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Specific/Robotics/borg_modules.yml
@@ -12,14 +12,15 @@
     items:
     - MiningDrillDiamond
     - Shovel
+    - AdvancedMineralScannerUnpowered
     - OreBagOfHolding
-    - Crowbar
+    - JawsOfLife
     - RadioHandheldNF
 
 - type: entity
   id: BorgModuleAdvancedParamedic
   parent: [ BaseBorgModuleMedical, BaseProviderBorgModule ]
-  name: advanced paramedical cyborg module
+  name: advanced paramedic cyborg module
   components:
   - type: Sprite
     layers:
