--- a/Resources/Prototypes/Entities/Structures/Machines/artifact_analyzer.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/artifact_analyzer.yml
@@ -49,7 +49,7 @@
     anchored: true
   - type: ApcPowerReceiver
     powerLoad: 12000
-    needsPower: true
+    needsPower: true # Frontier: false<true - changes power draw when idle
   - type: ArtifactAnalyzer
   - type: TraversalDistorter
   - type: ItemPlacer
