--- a/Resources/Prototypes/_NF/Maps/Outpost/frontier.yml
+++ b/Resources/Prototypes/_NF/Maps/Outpost/frontier.yml
@@ -15,6 +15,9 @@
 #          nameGenerator:
 #            !type:NanotrasenNameGenerator
 #            prefixCreator: '14'
+        - type: ExtraStationInformation
+          iconPath: /Textures/Interface/Misc/health_analyzer_out_of_range.png
+          stationSubtext: 'frontier-lobby-frontier-subtext'
         - type: StationJobs
           availableJobs:
             Contractor: [ -1, -1 ]
