fix bluespace vial blueprint name

--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_medical.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_medical.yml
@@ -22,7 +22,7 @@
 - type: entity
   parent: NFBaseBlueprintMedical
   id: NFBlueprintVialBluespace
-  name: bluespace syringe blueprint
+  name: bluespace vial blueprint
   description: A blueprint with a schematic of a bluespace vial. It can be inserted into an autolathe or a techfab.
   components:
   - type: Blueprint
