Add GitHub auto-label for database migrations

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -48,3 +48,6 @@
 "YML":
   - any: ["**/*.yml"]
     all: ["!Resources/Maps/_NF/**/*.yml", "!Resources/Prototypes/Maps/_NF/**/*.yml"]
+
+"DATABASE MIGRATIONS":
+  - "Content.Server.Database/Migrations/**/*.cs"
