--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -49,5 +49,5 @@
   - any: ["**/*.yml"]
     all: ["!Resources/Maps/_NF/**/*.yml", "!Resources/Prototypes/Maps/_NF/**/*.yml"]
 
-"DB":
+"DB Migration":
   - "Content.Server.Database/Migrations/**/*.cs"
