Add ExtraStationInformation component

--- a/Resources/Prototypes/_NF/Maps/Outpost/frontier.yml
+++ b/Resources/Prototypes/_NF/Maps/Outpost/frontier.yml
@@ -16,7 +16,7 @@
 #            !type:NanotrasenNameGenerator
 #            prefixCreator: '14'
         - type: ExtraStationInformation
-          iconPath: /Textures/Interface/Misc/health_analyzer_out_of_range.png
+          iconPath: /Textures/Logo/logo.png
           stationSubtext: 'frontier-lobby-frontier-subtext'
         - type: StationJobs
           availableJobs:
