--- a/Resources/Prototypes/_NF/PointsOfInterest/lodge.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/lodge.yml
@@ -1,5 +1,5 @@
 # Author Info
-# GitHub: 
+# GitHub:
 # Discord: Checkraze
 
 # Maintainer Info
@@ -28,6 +28,9 @@
       components:
         - type: StationNameSetup
           mapNameTemplate: 'Expeditionary Lodge'
+        - type: ExtraStationInformation
+          iconPath: /Textures/_NF/Markers/jobs.rsi/mercenary.png
+          stationSubtext: 'frontier-lobby-exped-subtext'
         - type: StationJobs
           availableJobs:
             Pilot: [ -1, -1 ]
