--- a/Resources/Prototypes/_NF/PointsOfInterest/nfsd.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/nfsd.yml
@@ -30,6 +30,9 @@
       components:
         - type: StationNameSetup
           mapNameTemplate: 'NFSD Outpost'
+        - type: ExtraStationInformation
+          iconPath: /Textures/_NF/Structures/Decoration/banner.rsi/nfsd-banner.png
+          stationSubtext: 'frontier-lobby-nfsd-subtext'
         - type: StationJobs
           availableJobs:
             Sheriff: [ 1, 1 ]
