--- a/Resources/Prototypes/_NF/PointsOfInterest/cove.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/cove.yml
@@ -1,5 +1,5 @@
 # Author Info
-# GitHub: 
+# GitHub:
 # Discord: dvir01
 
 # Maintainer Info
@@ -30,6 +30,9 @@
       components:
         - type: StationNameSetup
           mapNameTemplate: 'Pirate Cove'
+        - type: ExtraStationInformation
+          iconPath: /Textures/_NF/Interface/Pirate/piratelogo.png
+          stationSubtext: 'frontier-lobby-pirate-subtext'
         - type: StationJobs
           availableJobs:
             PirateCaptain: [ 1, 1 ]
