--- a/Resources/Prototypes/_NF/Guidebook/shipyard.yml
+++ b/Resources/Prototypes/_NF/Guidebook/shipyard.yml
@@ -35,8 +35,10 @@
   - ShipyardMcDelivery
   - ShipyardPathfinder
   - ShipyardPioneer
+  - ShipyardPlacebo
   - ShipyardProspector
   - ShipyardSearchlight
+  - ShipyardSkipper
   - ShipyardSpirit
   - ShipyardStasis
   - ShipyardVagabond
@@ -197,6 +199,11 @@
   text: "/ServerInfo/_NF/Guidebook/Shipyard/Pioneer.xml"
 
 - type: guideEntry
+  id: ShipyardPlacebo
+  name: guide-entry-shipyard-placebo
+  text: "/ServerInfo/_NF/Guidebook/Shipyard/Placebo.xml"
+
+- type: guideEntry
   id: ShipyardProspector
   name: guide-entry-shipyard-prospector
   text: "/ServerInfo/_NF/Guidebook/Shipyard/Prospector.xml"
@@ -205,6 +212,11 @@
   id: ShipyardSearchlight
   name: guide-entry-shipyard-searchlight
   text: "/ServerInfo/_NF/Guidebook/Shipyard/Searchlight.xml"
+
+- type: guideEntry
+  id: ShipyardSkipper
+  name: guide-entry-shipyard-skipper
+  text: "/ServerInfo/_NF/Guidebook/Shipyard/Skipper.xml"
 
 - type: guideEntry
   id: ShipyardSpirit
