--- a/Resources/Prototypes/_NF/Guidebook/shuttle_maps.yml
+++ b/Resources/Prototypes/_NF/Guidebook/shuttle_maps.yml
@@ -288,6 +288,18 @@
 
 - type: entity
   parent: PosterBase
+  id: ShuttleMapPlacebo
+  name: "NC Placebo"
+  description: "Detailed map of a Placebo shuttle."
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Sprite
+    sprite: _NF/Guidebook/shuttle_maps/128x96.rsi
+    state: placebo
+    scale: 1.2, 1.2
+
+- type: entity
+  parent: PosterBase
   id: ShuttleMapProspector
   name: "NC Prospector"
   description: "Detailed map of a Prospector shuttle."
@@ -308,6 +320,18 @@
   - type: Sprite
     sprite: _NF/Guidebook/shuttle_maps/128x96.rsi
     state: searchlight
+    scale: 1.2, 1.2
+
+- type: entity
+  parent: PosterBase
+  id: ShuttleMapSkipper
+  name: "NC Skipper"
+  description: "Detailed map of a Skipper shuttle."
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Sprite
+    sprite: _NF/Guidebook/shuttle_maps/128x96.rsi
+    state: skipper
     scale: 1.2, 1.2
 
 - type: entity
