--- a/Resources/Prototypes/_NF/Entities/Clothing/Head/hardsuit-helmets.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/Head/hardsuit-helmets.yml
@@ -29,6 +29,7 @@
         Piercing: 0.9
         Heat: 0.9
 
+
 - type: entity
   parent: ClothingHeadHelmetHardsuitMercenary
   id: ClothingHeadHelmetHardsuitPrivateSecurity
@@ -46,14 +47,16 @@
   parent: ClothingHeadHelmetHardsuitMercenary
   id: ClothingHeadHelmetHardsuitPMC
   name: PMC hardsuit helmet
-  description: Lightly armored hardsuit helmet for PMC needs.
+  description: Moderately-armored hardsuit helmet for PMC needs.
   components:
   - type: Sprite
     sprite: _NF/Clothing/Head/Hardsuits/PMC.rsi
   - type: Clothing
     sprite: _NF/Clothing/Head/Hardsuits/PMC.rsi
   - type: PointLight
-    color: "#ffff00"
+    color: "#ffffff"
+    radius: 5
+    energy: 3
 
 #Pilot Hardsuit
 - type: entity
