--- a/Resources/Prototypes/_NF/Recipes/Lathes/eva.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/eva.yml
@@ -472,10 +472,11 @@
   completetime: 4
   materials:
     Glass: 500
-    Plasteel: 2000
+    Plasteel: 2500
     Durathread: 2000
     Silver: 2000
     Gold: 1000
+    Steel: 250
 
 - type: latheRecipe
   id: ClothingOuterHardsuitBrigmedic
