--- a/Resources/Maps/_NF/Shuttles/stasis.yml
+++ b/Resources/Maps/_NF/Shuttles/stasis.yml
@@ -903,6 +903,7 @@ entities:
       - 187
       - 536
       - 609
+      - 603
   - uid: 556
     components:
     - type: Transform
@@ -2877,6 +2878,14 @@ entities:
       parent: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
+  - uid: 611
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 14.5,-6.5
+      parent: 1
+    - type: AtmosPipeColor
+      color: '#990000FF'
   - uid: 612
     components:
     - type: Transform
@@ -3100,6 +3109,14 @@ entities:
       parent: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
+  - uid: 610
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 13.5,-6.5
+      parent: 1
+    - type: AtmosPipeColor
+      color: '#990000FF'
 - proto: GasPort
   entities:
   - uid: 143
@@ -3180,6 +3197,8 @@ entities:
       pos: 11.5,-1.5
       parent: 1
     - type: DeviceNetwork
+      configurators:
+      - invalid
       deviceLists:
       - 452
     - type: AtmosPipeColor
@@ -3191,6 +3210,8 @@ entities:
       pos: 12.5,-8.5
       parent: 1
     - type: DeviceNetwork
+      configurators:
+      - invalid
       deviceLists:
       - 452
     - type: AtmosPipeColor
@@ -3350,6 +3371,8 @@ entities:
       pos: 14.5,-1.5
       parent: 1
     - type: DeviceNetwork
+      configurators:
+      - invalid
       deviceLists:
       - 452
     - type: AtmosPipeColor
@@ -3377,6 +3400,18 @@ entities:
       - 419
     - type: AtmosPipeColor
       color: '#990000FF'
+  - uid: 603
+    components:
+    - type: Transform
+      pos: 13.5,-5.5
+      parent: 1
+    - type: DeviceNetwork
+      configurators:
+      - invalid
+      deviceLists:
+      - 452
+    - type: AtmosPipeColor
+      color: '#990000FF'
   - uid: 609
     components:
     - type: Transform
@@ -3384,6 +3419,8 @@ entities:
       pos: 13.5,-8.5
       parent: 1
     - type: DeviceNetwork
+      configurators:
+      - invalid
       deviceLists:
       - 452
     - type: AtmosPipeColor
